# ecommerce_app

./: LICENSE  README.md  alembic.ini  app.py  crud.py  database.py  main.py  migrate.py  models.py  pyproject.toml  requirements.txt  schemas.py  security.py
alembic/: env.py
routers/: __init__.py  auth.py  cart.py  orders.py  payments.py  products.py  users.py
